--- a/force-app/main/default/classes/VisitResultSharingPanelRemote.cls
+++ b/force-app/main/default/classes/VisitResultSharingPanelRemote.cls
@@ -7,8 +7,9 @@
 public without sharing class VisitResultSharingPanelRemote {
 
     private static final String TYPE_DISABLED = 'Disabled';
-    private static final String TYPE_ALL = 'All';
+    private static String TYPE_ALL = 'All';
     private static final String TYPE_COUNTRIES = 'Countries';
+    private static final String TYPE_COUNTRIES_DISABLED = 'Countries_Disabled';
 
     public class VisitResultGroupWrapper {
         @AuraEnabled public String label;
@@ -45,7 +46,8 @@ public without sharing class VisitResultSharingPanelRemote {
         @AuraEnabled public List<LabelValueItem> typeSelectLVList = new List<LabelValueItem>{
                 new LabelValueItem('Disabled for all countries', TYPE_DISABLED),
                 new LabelValueItem('Enabled for all countries', TYPE_ALL),
-                new LabelValueItem('Enabled for selected countries', TYPE_COUNTRIES)
+                new LabelValueItem('Enabled for selected countries', TYPE_COUNTRIES),
+                new LabelValueItem('Disabled for selected countries', TYPE_COUNTRIES_DISABLED)
         };
         @AuraEnabled public List<LabelValueItem> participantDefaultLVList = new List<LabelValueItem>{
                 new LabelValueItem('Opt in', 'Opt in'),
@@ -91,7 +93,11 @@ public without sharing class VisitResultSharingPanelRemote {
                                 type = TYPE_ALL;
                             } else {
                                 countryCodes = sharing.Sharing_Countries__c;
-                                type = TYPE_COUNTRIES;
+                                if(sharing.Include_Countries__c) {
+                                    type = TYPE_COUNTRIES;
+                                } else {
+                                    type = TYPE_COUNTRIES_DISABLED;
+                                }
                             }
                         }
                     }
@@ -168,7 +174,7 @@ public without sharing class VisitResultSharingPanelRemote {
         for (VisitResultGroupWrapper groupWrapper : groups) {
             for (VisitResultWrapper vrWrapper : groupWrapper.visitResults) {
                 String countries = '';
-                if (vrWrapper.type == TYPE_COUNTRIES) {
+                if (vrWrapper.type == TYPE_COUNTRIES || vrWrapper.type == TYPE_COUNTRIES_DISABLED) {
                     countries = vrWrapper.countryCodes;
                 } else if (vrWrapper.type == TYPE_ALL) {
                     countries = TYPE_ALL;
@@ -178,6 +184,7 @@ public without sharing class VisitResultSharingPanelRemote {
                     if (vrWrapper.type != TYPE_DISABLED) {
                         typeVRSharingMap.put(vrWrapper.value, new Visit_Result_Type_Sharing__c(
                                 Clinical_Trial_Profile__c = ctpId,
+                                Include_Countries__c = vrWrapper.type == TYPE_COUNTRIES,
                                 Type__c = vrWrapper.value,
                                 Sharing_Countries__c = countries
                         ));
@@ -186,8 +193,9 @@ public without sharing class VisitResultSharingPanelRemote {
                     Visit_Result_Type_Sharing__c sharing = typeVRSharingMap.get(vrWrapper.value);
                     if (vrWrapper.type == TYPE_DISABLED) {
                         forDeletionSharings.add(typeVRSharingMap.remove(vrWrapper.value));
-                    } else if (vrWrapper.type == TYPE_COUNTRIES) {
-                        sharing.Sharing_Countries__c = vrWrapper.countryCodes;
+                    } else {
+                        sharing.Sharing_Countries__c = countries;
+                        sharing.Include_Countries__c = vrWrapper.type == TYPE_COUNTRIES;
                         typeVRSharingMap.put(vrWrapper.value, sharing);
                     }
                 }
