--- a/force-app/main/default/classes/Test_IntegrationVisitTriggerHandler.cls
+++ b/force-app/main/default/classes/Test_IntegrationVisitTriggerHandler.cls
@@ -1,5 +1,5 @@
 /**
- * Created by user on 08-Jul-19.
+ * Created by Denis Z on 08-Jul-19.
  */
 
 @IsTest
@@ -10,7 +10,7 @@ private class Test_IntegrationVisitTriggerHandler {
         Account acc = new Account();
         acc.Name = CommunityService.COMMUNITY_PARTICIPANT_ACCOUNT_NAME;
         insert acc;
-        ParticipantEnrollmentFactory.createParticipantEnrollmentRecords('1',2,3,3);
+        ParticipantEnrollmentFactory.createParticipantEnrollmentRecords('1','2','3');
     }
 
     @IsTest
