--- a/force-app/main/default/classes/Test_ReferringRemote.cls
+++ b/force-app/main/default/classes/Test_ReferringRemote.cls
@@ -2,126 +2,44 @@
  * Created by Denis on 15.04.2019.
  */
 
-@IsTest(IsParallel=true)
-private class Test_ReferringRemote {
-
-    static Integer i = 0;
-
-    public class TrialServiceMock implements System.StubProvider {
-
-        public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
-                List<Type> listOfParamTypes, List<String> listOfParamNames, List<Object> listOfArgs) {
-            if(stubbedMethodName == 'getTrialImpl'){
-                return new Clinical_Trial_Profile__c(Link_to_Pre_screening__c = 'avc.com');
-            }
-            return null;
+@IsTest
+private without sharing class Test_ReferringRemote {
+    
+    @IsTest
+    static void saveParticipant() {
+        TestData.loadTestData();
+        Test.startTest();
+        TestData testDataInstance = new TestData();
+        System.runAs(testDataInstance.hcpUser){
+            Participant_Enrollment__c pe = new Participant_Enrollment__c(
+                    HCP__c = testDataInstance.hcpEnrollment.Id,
+                    Study_Site__c = testDataInstance.ss.Id,
+                    Patient_ID__c = 'SomePatientId1',
+                    Referral_Source__c = 'HCP',
+                    Screening_ID__c = 'TestScrId12345'
+            );
+            Participant__c participant = new Participant__c(
+                    First_Name__c = 'PTest',
+                    Last_Name__c = 'PTest',
+                    Phone__c = '13413223',
+                    Email__c = 'partTest@email.com',
+                    Mailing_Country_Code__c = 'US',
+                    Mailing_State_Code__c = 'AL'
+            );
+            ReferringRemote.saveParticipant(testDataInstance.ctp.Id, testDataInstance.hcpEnrollment.Id, JSON.serialize(pe), JSON.serialize(participant));
         }
+        Test.stopTest();
     }
-
-    public class HCPEnrollmentServiceMock implements System.StubProvider {
-
-        public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
-                List<Type> listOfParamTypes, List<String> listOfParamNames, List<Object> listOfArgs) {
-            if(stubbedMethodName == 'getHCPEnrollmentByIdImpl'){
-                Account acc = new Account();
-                acc.Name = CommunityService.COMMUNITY_PARTICIPANT_ACCOUNT_NAME;
-                insert acc;
-                Clinical_Trial_Profile__c profile = new Clinical_Trial_Profile__c();
-                Therapeutic_Area__c area = new Therapeutic_Area__c();
-                insert area;
-                profile.Therapeutic_Area__c = area.Id;
-                profile.NCT_Number__c = 'NCT0000110' + i;
-                i++;
-                profile.Protocol_ID__c = 'Prot-33' + i;
-                insert profile;
-                Contact contact = new Contact();
-                contact.LastName = '123';
-                insert contact;
-                Study_Site__c site = new Study_Site__c();
-                site.Principal_Investigator__c = contact.Id;
-                site.Clinical_Trial_Profile__c = profile.Id;
-                site.Site__c = acc.Id;
-                insert site;
-                return new HCP_Enrollment__c(Study_Site__c = site.Id);
-            }
-            return null;
-        }
-    }
-
-    public class ParticipantEnrollmentServiceMock implements System.StubProvider {
-
-        public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
-                List<Type> listOfParamTypes, List<String> listOfParamNames, List<Object> listOfArgs) {
-            if(stubbedMethodName == 'getParticipantEnrollmentImpl'){
-                return new Participant_Enrollment__c();
-            } else if(stubbedMethodName == 'createParticipantEnrollmentImpl'){
-                return new Participant_Enrollment__c();
-            } else if(stubbedMethodName == 'getPendingParticipantEnrollmentsImpl'){
-                return new List<Participant_Enrollment__c>();
-            }
-            return null;
-        }
-    }
-
-    public class StudySiteServiceMock implements System.StubProvider {
-
-        public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
-                List<Type> listOfParamTypes, List<String> listOfParamNames, List<Object> listOfArgs) {
-            if(stubbedMethodName == 'getSiteFilterDataImpl'){
-                return new StudySiteService.SiteFilterData();
-            } else if(stubbedMethodName == 'getStudySitesWithDistanceForHCPByTrialIdImpl'){
-                return new List<StudySiteService.StudySiteDistanceWrapper>();
-            }
-            return null;
-        }
-    }
-
-    public class CommunityServiceMock implements System.StubProvider {
-
-        public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
-                List<Type> listOfParamTypes, List<String> listOfParamNames, List<Object> listOfArgs) {
-            if(stubbedMethodName == 'getCurrentContactId'){
-                Contact contact = new Contact();
-                contact.LastName = 'Contact';
-                insert contact;
-                return contact.Id;
-            }
-            return null;
-        }
-    }
-
+    
     @IsTest
     static void getInitData() {
-        CommunityService.setMock(new CommunityServiceMock());
-        StudySiteService.setMock(new StudySiteServiceMock());
-        ParticipantEnrollmentService.setMock(new ParticipantEnrollmentServiceMock());
-        HCPEnrollmentService.setMock(new HCPEnrollmentServiceMock());
-        TrialService.setMock(new TrialServiceMock());
-
-        ReferringRemote.getInitData(null, TestDataFactory.getFakeId(Participant_Enrollment__c.getSObjectType()), TestDataFactory.getFakeId(HCP_Enrollment__c.getSObjectType()), null);
-        Participant__c participant = new Participant__c();
-        Participant_Enrollment__c enrollment = new Participant_Enrollment__c();
-        //enrollment.Clinical_Trial_Profile__c = profile.Id;
-        insert enrollment;
-        Contact contact = new Contact();
-        contact.LastName = '123';
-        insert contact;
-        participant.Contact__c = contact.Id;
-        participant.First_Name__c = 'FirstName';
-        participant.Last_Name__c = 'LastName';
-        participant.Email__c = '123@gm.com';
-        ReferringRemote.saveParticipant(null, null, JSON.serialize(enrollment), JSON.serialize(participant));
-        participant = new Participant__c();
-        participant.Contact__c = contact.Id;
-        participant.First_Name__c = 'FirstName';
-        participant.Last_Name__c = 'LastName';
-        participant.Email__c = '123@gm.com';
-        try {
-            ReferringRemote.saveParticipant(null, null, JSON.serialize(enrollment), JSON.serialize(participant));
-        } catch (EmailException e){
-            System.assertNotEquals(e, null);
+        TestData.loadTestData();
+        Test.startTest();
+        TestData testDataInstance = new TestData();
+        System.runAs(testDataInstance.hcpUser){
+            String initDataStr = ReferringRemote.getInitData(testDataInstance.ctp.Id, testDataInstance.pe.Id, testDataInstance.hcpEnrollment.Id, CommunityService.USER_MODE_HCP);
         }
-        ReferringRemote.setfailedReferral(JSON.serialize(enrollment), null);
+        Test.stopTest();
     }
 
 }
