--- a/force-app/main/default/classes/ParticipantEnrollmentTriggerHandler.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentTriggerHandler.cls
@@ -311,6 +311,7 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                 SELECT
                         Id,
                         Clinical_Trial_Profile__c,
+                        Is_Midpoint__c,
                         Survey__c,
                         Survey__r.Name,
                         Active_On_Status__c,
