--- a/force-app/main/default/classes/DuplicateContactController.cls
+++ b/force-app/main/default/classes/DuplicateContactController.cls
@@ -11,9 +11,9 @@ public without sharing class  DuplicateContactController {
 			lastName__c = participant.Last_Name__c,
 			email__c = participant.email__c,
 			phone__c = participant.phone__c,
-            birthYear__c = participant.Date_of_Birth__c != null ?  participant.Date_of_Birth__c.substring(0,4) : '',
-            //BirthDate__c = participant.Date_of_Birth__c != null ?  participant.Date_of_Birth__c.substring(0,4) : '',
-            Address_Country__c = participant.Mailing_Country_Code__c
+            birthYear__c = participant.Date_of_Birth__c != null && participant.Date_of_Birth__c != '' ?  participant.Date_of_Birth__c.substring(0,4) : '',
+            Address_Country__c = participant.Mailing_Country_Code__c,
+            Data_Source__c = participantEnrollment.Referral_Source__c
 		);
         Participant__c participantRecord = primaryPhoneEmailCheck(tempRecord);
         isPERCreated = false;
